# investoryX-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  index.js  main.py  package.json  pyproject.toml  railway.toml  requirements.txt
.claude/: CLAUDE.md  hooks.json
.claude/rules/: api_conventions.md  code_style.md
.github/workflows/: trading-engine-tests.yml
alembic/: env.py
alembic/versions/: 2f3c1a9b6c7d_rename_user_columns.py  3b9e4a1e2f8b_add_simulator_tables.py  423650f7fa82_add_price_bars.py  46bae94b9254_initial_migration_with_watchlist.py  5a1c8e9f2d3b_rename_simulation_to_simulator.py  7b2f6d9a1c4e_add_user_to_simulators.py  9d31b7c4e2aa_add_simulator_signals.py  a1f3c2d4e5b6_add_strategy_name_to_simulators.py  cd42a415ef5a_watchlist_constraints.py  db0b831751b7_add_simulator_fields.py  e9c4d1f2a3b8_add_balance_after_to_simulator_trades.py  f3a8b2c1d9e7_add_source_to_trades_and_ledger.py
api/: index.js
api/dataAccess/: stockScraper.py
app/: main.py
app/api/dataAccess/: stockScraper.py
app/api/database/: database.py  populateStockData.py
app/api/routes/: stocks.py  users.py  watchlist.py
app/models/: requests.py  stocks.py  users.py  watchItems.py  watchlist.py
app/utils/: helper.py
data/stocklist/: search_stock_defaults.json
dataTypes/: history.py
models/: MarketIndexETFs.json  requests.py
skills/: populate-stock-data.md
src/: celery_app.py  main.py
src/api/: __init__.py
src/api/auth/: auth.py
src/api/data_access/: stock_data_provider.py
src/core/: config.py  database.py  security.py
src/dataTypes/: history.py
src/models/: __init__.py  price_bar.py  requests.py  simulator.py  simulator_cash_ledger.py  simulator_position.py  simulator_schemas.py  simulator_signal.py  simulator_tracked_stock.py  simulator_trade.py  stocks.py  users.py  watchlist.py
src/routes/: auth.py  dev.py  email.py  market_data.py  simulator.py  stocks.py  users.py  watchlist.py
src/schemas/: simulator.py
src/services/: email.py  seed.py  stock_data.py
src/stocklist/: listing_status.csv  market_index_ETFs.json  market_index_ETFs_2.json
src/trading_engine/: README.md
src/utils/: __init__.py  helper.py  rate_limiter.py  retry.py
tests/: README.md  conftest.py
todo/: screener-cache-prewarming.md
(+37 files in other folders)
