[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[project]
name = "backend2"
version = "0.1.0"
description = ""
authors = [
    {name = "Preston Tom-Ying",email = "preston.tomying@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types (==0.7.0)",
    "anyio (==4.5.2)",
    "click (==8.1.8)",
    "colorama (==0.4.6)",
    "exceptiongroup (==1.3.0)",
    "fastapi (==0.115.12)",
    "h11 (==0.16.0)",
    "idna (==3.10)",
    "pydantic (==2.10.6)",
    "pydantic-core (==2.27.2)",
    "sniffio (==1.3.1)",
    "starlette (==0.44.0)",
    "typing-extensions (==4.13.2)",
    "uvicorn (==0.33.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "selectolax (>=0.3.31,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
